k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 88-api
  labels:
    name: 88-api
    app: 88-api
